--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html lang="en" class="min-h-full">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Meals</title>
   </head>
-  <body class="min-h-full">
-    <div id="app" class="min-h-full"></div>
+  <body class="h-[100vh] bg-gray-200">
+    <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
